@@ -14,6 +14,7 @@ Changes for 1.3:
 
 Integrated from 1.1.x
 
+ - history stats removed from Status of ZABBIX report (Alexei)
  - fixed Most Busy trigger report for multi-item triggers (Alexei)
  - support of system.swap.size[,pfree] and system.swap.size[,pused] (Alexei)
  - fixed problem when adding a graph under PostgreSQL (Alexei)
